--- a/ContosoUniversity/Views/User/Register.cshtml
+++ b/ContosoUniversity/Views/User/Register.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Register" method="post">
+        <form class="form-horizontal" asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserName" class="control-label"></label>
@@ -18,16 +18,16 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" class="form-control" id="pwd1" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label class="control-label"></label>
-                <input class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+                <label class="control-label">Confrim Password</label>
+                <input class="form-control" id="pwd2"/>
+                <span class="text-danger" id="pwd_err"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" onclick="CheckPassword();"/> 
             </div>
         </form>
     </div>
@@ -35,4 +35,13 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
+<script type="text/javascript">
+    function CheckPassword() {
+        $("#pwd_err").text("");
+        if ($("#pwd1").val() != $("#pwd2").val()) {
+            $("#pwd_err").text("Password must be same!");
+            return false;
+        }
+        return;
+    }
+</script>
