--- a/ContosoUniversity/Views/Shared/_Layout.cshtml
+++ b/ContosoUniversity/Views/Shared/_Layout.cshtml
@@ -54,8 +54,7 @@
                     }
                     else
                     {
-                        <a class="nav-link text-dark" asp-controller="User" asp-action="Login">Login</a><span> / </span>
-                        <a class="nav-link text-dark" asp-controller="User" asp-action="Register">Register</a>
+                        <a class="nav-link text-dark" asp-controller="User" asp-action="Index">Login</a>
                     }
                 }
 
@@ -77,11 +76,11 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @*<script type="text/javascript">
+    <script type="text/javascript">
         $(function () {
             alert($.session.get("user"));
         });
-    </script>*@
+    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
