--- a/ContosoUniversity/Views/User/Login.cshtml
+++ b/ContosoUniversity/Views/User/Login.cshtml
@@ -23,16 +23,17 @@
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                 </div>
-                @*<div class="form-group">
+                <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <div class="checkbox">
                             <label><input type="checkbox" />&nbsp;Remember me</label>
                         </div>
                     </div>
-                </div>*@
+                </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <input type="submit" class="btn btn-primary" value="Sign in" />
+                        <input type="submit" class="btn btn-primary" asp-action="Register" value="Register" />
                     </div>
                 </div>
             </form>
