--- a/ContosoUniversity/Views/Students/Index.cshtml
+++ b/ContosoUniversity/Views/Students/Index.cshtml
@@ -30,7 +30,15 @@
 
     </div>   
 </div>
-<input type="text" value="@ViewData["User"]" />
+<form asp-action="Index" asp-controller="Students">
+    <div>
+        <p>
+            Name: <input type="text" />
+            <input type="submit" value="Search" />
+        </p>
+    </div>
+</form>
+<br />
 <table class="table">
     <thead>
         <tr>
